package structure.adapterPattern.classAdapter;

interface ACPower {

    void outputAC5V(float amp);

}
