package structure.adapterPattern.classAdapter;

class DCPower {

    void outputDC220V(float amp) {
        System.out.println("[DC] voltage = 220V, current = " + amp + "A");
    }

}
